2008-04-11  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Ide.Gui.Pads.ProjectPad/ProjectFileNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads.ProjectPad/SystemFileNodeBuilder.cs,
	  MonoDevelop.Ide.Gui.Pads/FileListItem.cs,
	  gtk-gui/MonoDevelop.Ide.Gui.Dialogs.TipOfTheDayWindow.cs,
	  MonoDevelop.Ide.Gui/SdiWorkspaceWindow.cs,
	  MonoDevelop.Ide.Gui/SdiWorkspaceLayout.cs: Track api changes.

2008-04-10  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui.Pads.ClassPad/ProjectNodeBuilder.cs: Removed some
	  debug code. 

2008-04-10  Andres G. Aragoneses <aaragoneses@novell.com>

	* MonoDevelop.Ide.Gui.Dialogs/ReplaceInFilesDialog.cs: Improved string
	(redo r66359: http://lists.ximian.com/pipermail/mono-patches/2006-October/081256.html ).

2008-04-10  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Dom.Parser/ProjectParserService.cs,
	  MonoDevelop.Ide.addin.xml: Added extension point for parsers.

2008-04-09  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Gui/MonoDevelopTreeView.cs: Fix for "Bug 377810 -
	  Many errors when expanding MonoDevelop treeviews with keyboard".
	  Also remove debug code.

2008-04-09  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Dom.Parser/ProjectParserService.cs,
	  MonoDevelop.Ide.Dom.Parser/IParser.cs: Changed parser interface a
	  bit.

2008-04-08  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.Ide.Gui/SdiWorkspaceWindow.cs: Remove debug code.

2008-04-01  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.Ide.Gui/MonoDevelopTreeView.cs: fixed Bug 375387 -
	  Sigsegv when 'reloading file'

2008-03-31  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.Ide.DocumentSwitcher.cs,
	  MonoDevelop.Ide.Gui/DocumentSwitcher.cs: Worked on document
	  switcher. (373578)

2008-03-29  Zach Lute <zach.lute@gmail.com> 

	* MonoDevelop.Ide.Commands/RefactoryCommands.cs: Added support for
	  'Find references' for local variables and parameters. (Bug #351015)
